[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor tools/forms/skill_effect_template.gd" type="Script" id=1]

[node name="WindowDialog" type="WindowDialog"]
visible = true
margin_right = 516.0
margin_bottom = 590.0
window_title = "effect templates"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 511.0
margin_bottom = 585.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 506.0
margin_bottom = 72.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 499.0
margin_bottom = 65.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 492.0
margin_bottom = 24.0
text = "use effect "

[node name="effselect" type="OptionButton" parent="MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 492.0
margin_bottom = 58.0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 506.0
margin_bottom = 242.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 499.0
margin_bottom = 159.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_right = 492.0
margin_bottom = 40.0

[node name="CheckBox" type="CheckButton" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 247.0
margin_bottom = 40.0
pressed = true
text = "basic template"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 44.0
margin_right = 492.0
margin_bottom = 78.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_right = 219.0
margin_bottom = 34.0
text = "with chance (0-1)"

[node name="chance" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer3"]
margin_left = 223.0
margin_right = 293.0
margin_bottom = 34.0
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 82.0
margin_right = 492.0
margin_bottom = 116.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_right = 165.0
margin_bottom = 34.0
text = "for duration"

[node name="duration" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer4"]
margin_left = 169.0
margin_right = 239.0
margin_bottom = 34.0
text = "1"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 492.0
margin_bottom = 152.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer5"]
margin_right = 324.0
margin_bottom = 32.0
text = "with skill value processing"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 492.0
margin_bottom = 216.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer6"]
margin_right = 24.0
margin_bottom = 32.0

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 492.0
margin_bottom = 216.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer7"]
margin_right = 24.0
margin_bottom = 32.0

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 506.0
margin_bottom = 322.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 499.0
margin_bottom = 69.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_right = 492.0
margin_bottom = 24.0
text = "with comment (optional)"

[node name="commedit" type="LineEdit" parent="MarginContainer/VBoxContainer/PanelContainer3/VBoxContainer"]
margin_top = 28.0
margin_right = 492.0
margin_bottom = 62.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 506.0
margin_bottom = 356.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 40.0
margin_bottom = 30.0
text = "ok"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 44.0
margin_right = 130.0
margin_bottom = 30.0
text = "cancel"
[connection signal="toggled" from="MarginContainer/VBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer2/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="commit"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button2" to="." method="revert"]
